<resources>
    <string name="app_name">Toki Pona Sitelen Emoji Keyboard</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Click to enable Toki Pona Sitelen Emoji in your Keyboard Settings</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="caps">⬆️</string>
    <string name="delete">⬅️</string>
    <string name="changekeyboard">🌐</string>
    <string name="namer">🔣</string>
    <string name="enter">↩️</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="emojisetchoice">
        <item>Default</item>
        <item>Pu Only</item>
        <item>Nimi ale pona</item>
    </string-array>
    <string-array name="emojisetchoicevalues">
        <item>default</item>
        <item>pu-only</item>
        <item>nimi-ale-pona</item>
    </string-array>
    <string-array name="pu_words">
        <item>mi</item>
        <item>li</item>
        <item>e</item>
        <item>toki</item>
        <item>pona</item>
        <item>ni</item>
        <item>a</item>
        <item>la</item>
        <item>ala</item>
        <item>sina</item>
        <item>lon</item>
        <item>jan</item>
        <item>tawa</item>
        <item>pi</item>
        <item>sona</item>
        <item>tenpo</item>
        <item>ona</item>
        <item>wile</item>
        <item>mute</item>
        <item>taso</item>
        <item>o</item>
        <item>kama</item>
        <item>ken</item>
        <item>pilin</item>
        <item>nimi</item>
        <item>ike</item>
        <item>lili</item>
        <item>tan</item>
        <item>tomo</item>
        <item>pali</item>
        <item>ma</item>
        <item>sitelen</item>
        <item>kepeken</item>
        <item>musi</item>
        <item>jo</item>
        <item>moku</item>
        <item>lukin</item>
        <item>sama</item>
        <item>telo</item>
        <item>lape</item>
        <item>seme</item>
        <item>ilo</item>
        <item>ale</item>
        <item>pini</item>
        <item>ante</item>
        <item>suli</item>
        <item>ijo</item>
        <item>anu</item>
        <item>nasa</item>
        <item>kulupu</item>
        <item>suno</item>
        <item>pana</item>
        <item>kalama</item>
        <item>lipu</item>
        <item>tu</item>
        <item>nasin</item>
        <item>sin</item>
        <item>pakala</item>
        <item>en</item>
        <item>wawa</item>
        <item>olin</item>
        <item>lawa</item>
        <item>awen</item>
        <item>sewi</item>
        <item>seli</item>
        <item>kon</item>
        <item>soweli</item>
        <item>weka</item>
        <item>mu</item>
        <item>wan</item>
        <item>lete</item>
        <item>sike</item>
        <item>nanpa</item>
        <item>kasi</item>
        <item>moli</item>
        <item>kute</item>
        <item>suwi</item>
        <item>utala</item>
        <item>pimeja</item>
        <item>mama</item>
        <item>sijelo</item>
        <item>pan</item>
        <item>luka</item>
        <item>uta</item>
        <item>open</item>
        <item>ko</item>
        <item>jaki</item>
        <item>kala</item>
        <item>pu</item>
        <item>insa</item>
        <item>esun</item>
        <item>kili</item>
        <item>poka</item>
        <item>mani</item>
        <item>len</item>
        <item>linja</item>
        <item>meli</item>
        <item>kiwen</item>
        <item>poki</item>
        <item>supa</item>
        <item>kule</item>
        <item>mije</item>
        <item>waso</item>
        <item>walo</item>
        <item>pipi</item>
        <item>palisa</item>
        <item>anpa</item>
        <item>noka</item>
        <item>akesi</item>
        <item>loje</item>
        <item>mun</item>
        <item>nena</item>
        <item>unpa</item>
        <item>sinpin</item>
        <item>selo</item>
        <item>monsi</item>
        <item>jelo</item>
        <item>laso</item>
        <item>alasa</item>
        <item>lupa</item>
    </string-array>
    <string-array name="default_words">
        <item>mi</item>
        <item>li</item>
        <item>e</item>
        <item>toki</item>
        <item>pona</item>
        <item>ni</item>
        <item>a</item>
        <item>la</item>
        <item>ala</item>
        <item>sina</item>
        <item>lon</item>
        <item>jan</item>
        <item>tawa</item>
        <item>pi</item>
        <item>sona</item>
        <item>tenpo</item>
        <item>ona</item>
        <item>wile</item>
        <item>mute</item>
        <item>taso</item>
        <item>o</item>
        <item>kama</item>
        <item>ken</item>
        <item>pilin</item>
        <item>nimi</item>
        <item>ike</item>
        <item>lili</item>
        <item>tan</item>
        <item>tomo</item>
        <item>pali</item>
        <item>ma</item>
        <item>sitelen</item>
        <item>kepeken</item>
        <item>musi</item>
        <item>jo</item>
        <item>moku</item>
        <item>lukin</item>
        <item>sama</item>
        <item>telo</item>
        <item>lape</item>
        <item>seme</item>
        <item>kin</item>
        <item>ilo</item>
        <item>ale</item>
        <item>pini</item>
        <item>ante</item>
        <item>suli</item>
        <item>ijo</item>
        <item>anu</item>
        <item>nasa</item>
        <item>kulupu</item>
        <item>suno</item>
        <item>pana</item>
        <item>kalama</item>
        <item>lipu</item>
        <item>tu</item>
        <item>nasin</item>
        <item>sin</item>
        <item>pakala</item>
        <item>en</item>
        <item>wawa</item>
        <item>olin</item>
        <item>lawa</item>
        <item>awen</item>
        <item>sewi</item>
        <item>seli</item>
        <item>kon</item>
        <item>soweli</item>
        <item>weka</item>
        <item>mu</item>
        <item>wan</item>
        <item>ali</item>
        <item>lete</item>
        <item>sike</item>
        <item>nanpa</item>
        <item>kasi</item>
        <item>moli</item>
        <item>kute</item>
        <item>suwi</item>
        <item>utala</item>
        <item>pimeja</item>
        <item>mama</item>
        <item>sijelo</item>
        <item>pan</item>
        <item>luka</item>
        <item>uta</item>
        <item>open</item>
        <item>ko</item>
        <item>jaki</item>
        <item>kala</item>
        <item>pu</item>
        <item>insa</item>
        <item>esun</item>
        <item>kili</item>
        <item>poka</item>
        <item>mani</item>
        <item>len</item>
        <item>linja</item>
        <item>meli</item>
        <item>kiwen</item>
        <item>poki</item>
        <item>supa</item>
        <item>kule</item>
        <item>mije</item>
        <item>waso</item>
        <item>walo</item>
        <item>pipi</item>
        <item>palisa</item>
        <item>anpa</item>
        <item>noka</item>
        <item>akesi</item>
        <item>loje</item>
        <item>mun</item>
        <item>nena</item>
        <item>unpa</item>
        <item>sinpin</item>
        <item>selo</item>
        <item>monsi</item>
        <item>jelo</item>
        <item>monsuta</item>
        <item>laso</item>
        <item>oko</item>
        <item>alasa</item>
        <item>lupa</item>
        <item>majuna</item>
        <item>kipisi</item>
        <item>leko</item>
        <item>namako</item>
        <item>apeja</item>
        <item>powe</item>
        <item>pake</item>
        <item>tonsi</item>
        <item>linluwi</item>
        <item>kijetesantakalu</item>
        <item>mulapisu</item>
    </string-array>
    <string-array name="nap_words">
        <item>lanpan</item>
        <item>epiku</item>
        <item>ete</item>
        <item>ewe</item>
        <item>kan</item>
        <item>oke</item>
        <item>pata</item>
        <item>kuntu</item>
        <item>kapesi</item>
        <item>kamalawala</item>
        <item>uupekosi</item>
        <item>sikomo</item>
        <item>pasila</item>
        <item>pa</item>
        <item>omen</item>
        <item>okepuma</item>
        <item>misikeke</item>
        <item>wawajete</item>
        <item>jami</item>
        <item>waleja</item>
        <item>melome</item>
        <item>peto</item>
        <item>pipo</item>
        <item>itomi</item>
        <item>mijomi</item>
        <item>samu</item>
        <item>likujo</item>
        <item>soto</item>
        <item>soko</item>
        <item>polinpin</item>
        <item>peta</item>
        <item>su</item>
        <item>lokon</item>
        <item>pomotolo</item>
        <item>we</item>
        <item>te</item>
        <item>tuli</item>
        <item>po</item>
        <item>wi</item>
    </string-array>
</resources>