<?xml version="1.0" encoding="utf-8"?>
<GridLayout android:id="@+id/GridKeyboard" android:layout_width="fill_parent" android:layout_height="wrap_content" android:rowCount="5" android:columnCount="1"
    xmlns:android="http://schemas.android.com/apk/res/android" android:background="@color/primaryBackground">
    <LinearLayout android:orientation="horizontal" android:layout_width="0.0dip" android:layout_height="wrap_content" android:id="@+id/suggestionlayout"
        android:layout_column="0" android:layout_row="0" android:layout_columnWeight="1.0" android:background="@color/primarySuggestions">
        <TextView android:id="@+id/suggestion2" android:layout_width="0.0dip" android:layout_height="50.0dip" android:layout_weight="3.0" android:text=""  android:textColor="@color/primaryText" android:gravity="center" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <TextView android:id="@+id/suggestion1" android:layout_width="0.0dip" android:layout_height="50.0dip" android:layout_weight="4.0" android:text=""  android:textColor="@color/primaryText" android:gravity="center" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <TextView android:id="@+id/suggestion3" android:layout_width="0.0dip" android:layout_height="50.0dip" android:layout_weight="3.0" android:text=""  android:textColor="@color/primaryText" android:gravity="center" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    </LinearLayout>

    <LinearLayout android:orientation="horizontal" android:layout_width="0.0dip" android:layout_height="wrap_content"
        android:layout_column="0" android:layout_row="1" android:layout_columnWeight="1.0" >
        <TextView android:id="@+id/keyQ" android:layout_width="0.0dip" android:layout_height="65.0dip" android:layout_weight="1.0" android:text="q" android:background="@drawable/button" android:textColor="@color/primaryText" android:gravity="center" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <TextView android:id="@+id/keyW" android:layout_width="0.0dip" android:layout_height="65.0dip" android:layout_weight="1.0" android:text="w" android:background="@drawable/button" android:textColor="@color/primaryText" android:gravity="center" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <TextView android:id="@+id/keyE" android:layout_width="0.0dip" android:layout_height="65.0dip" android:layout_weight="1.0" android:text="e" android:background="@drawable/button" android:textColor="@color/primaryText" android:gravity="center" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <TextView android:id="@+id/keyR" android:layout_width="0.0dip" android:layout_height="65.0dip" android:layout_weight="1.0" android:text="r" android:background="@drawable/button" android:textColor="@color/primaryText" android:gravity="center" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <TextView android:id="@+id/keyT" android:layout_width="0.0dip" android:layout_height="65.0dip" android:layout_weight="1.0" android:text="t" android:background="@drawable/button" android:textColor="@color/primaryText" android:gravity="center" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <TextView android:id="@+id/keyY" android:layout_width="0.0dip" android:layout_height="65.0dip" android:layout_weight="1.0" android:text="y" android:background="@drawable/button" android:textColor="@color/primaryText" android:gravity="center" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <TextView android:id="@+id/keyU" android:layout_width="0.0dip" android:layout_height="65.0dip" android:layout_weight="1.0" android:text="u" android:background="@drawable/button" android:textColor="@color/primaryText" android:gravity="center" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <TextView android:id="@+id/keyI" android:layout_width="0.0dip" android:layout_height="65.0dip" android:layout_weight="1.0" android:text="i" android:background="@drawable/button" android:textColor="@color/primaryText" android:gravity="center" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <TextView android:id="@+id/keyO" android:layout_width="0.0dip" android:layout_height="65.0dip" android:layout_weight="1.0" android:text="o" android:background="@drawable/button" android:textColor="@color/primaryText" android:gravity="center" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <TextView android:id="@+id/keyP" android:layout_width="0.0dip" android:layout_height="65.0dip" android:layout_weight="1.0" android:text="p" android:background="@drawable/button" android:textColor="@color/primaryText" android:gravity="center" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="0.0dip" android:layout_height="wrap_content"
        android:layout_column="0" android:layout_row="2" android:layout_columnWeight="1.0">
        <TextView android:layout_width="0.0dip" android:layout_height="65.0dip" android:layout_weight="0.5"/>
        <TextView android:id="@+id/keyA" android:layout_width="0.0dip" android:layout_height="65.0dip" android:layout_weight="1.0" android:text="a" android:background="@drawable/button" android:textColor="@color/primaryText" android:gravity="center" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <TextView android:id="@+id/keyS" android:layout_width="0.0dip" android:layout_height="65.0dip" android:layout_weight="1.0" android:text="s" android:background="@drawable/button" android:textColor="@color/primaryText" android:gravity="center" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <TextView android:id="@+id/keyD" android:layout_width="0.0dip" android:layout_height="65.0dip" android:layout_weight="1.0" android:text="d" android:background="@drawable/button" android:textColor="@color/primaryText" android:gravity="center" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <TextView android:id="@+id/keyF" android:layout_width="0.0dip" android:layout_height="65.0dip" android:layout_weight="1.0" android:text="f" android:background="@drawable/button" android:textColor="@color/primaryText" android:gravity="center" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <TextView android:id="@+id/keyG" android:layout_width="0.0dip" android:layout_height="65.0dip" android:layout_weight="1.0" android:text="g" android:background="@drawable/button" android:textColor="@color/primaryText" android:gravity="center" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <TextView android:id="@+id/keyH" android:layout_width="0.0dip" android:layout_height="65.0dip" android:layout_weight="1.0" android:text="h" android:background="@drawable/button" android:textColor="@color/primaryText" android:gravity="center" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <TextView android:id="@+id/keyJ" android:layout_width="0.0dip" android:layout_height="65.0dip" android:layout_weight="1.0" android:text="j" android:background="@drawable/button" android:textColor="@color/primaryText" android:gravity="center" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <TextView android:id="@+id/keyK" android:layout_width="0.0dip" android:layout_height="65.0dip" android:layout_weight="1.0" android:text="k" android:background="@drawable/button" android:textColor="@color/primaryText" android:gravity="center" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <TextView android:id="@+id/keyL" android:layout_width="0.0dip" android:layout_height="65.0dip" android:layout_weight="1.0" android:text="l" android:background="@drawable/button" android:textColor="@color/primaryText" android:gravity="center" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <TextView android:layout_width="0.0dip" android:layout_height="65.0dip" android:layout_weight="0.5"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="0.0dip" android:layout_height="wrap_content"
        android:layout_column="0" android:layout_row="3" android:layout_columnWeight="1.0">
        <TextView android:id="@+id/keyCaps" android:layout_width="0.0dip" android:layout_height="65.0dip" android:layout_weight="1.0" android:text="@string/caps" android:background="@drawable/button" android:textColor="@color/primaryText" android:gravity="center" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <TextView android:id="@+id/keyZ" android:layout_width="0.0dip" android:layout_height="65.0dip" android:layout_weight="1.0" android:text="z" android:background="@drawable/button" android:textColor="@color/primaryText" android:gravity="center" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <TextView android:id="@+id/keyX" android:layout_width="0.0dip" android:layout_height="65.0dip" android:layout_weight="1.0" android:text="x" android:background="@drawable/button" android:textColor="@color/primaryText" android:gravity="center" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <TextView android:id="@+id/keyC" android:layout_width="0.0dip" android:layout_height="65.0dip" android:layout_weight="1.0" android:text="c" android:background="@drawable/button" android:textColor="@color/primaryText" android:gravity="center" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <TextView android:id="@+id/keyV" android:layout_width="0.0dip" android:layout_height="65.0dip" android:layout_weight="1.0" android:text="v" android:background="@drawable/button" android:textColor="@color/primaryText" android:gravity="center" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <TextView android:id="@+id/keyB" android:layout_width="0.0dip" android:layout_height="65.0dip" android:layout_weight="1.0" android:text="b" android:background="@drawable/button" android:textColor="@color/primaryText" android:gravity="center" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <TextView android:id="@+id/keyN" android:layout_width="0.0dip" android:layout_height="65.0dip" android:layout_weight="1.0" android:text="n" android:background="@drawable/button" android:textColor="@color/primaryText" android:gravity="center" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <TextView android:id="@+id/keyM" android:layout_width="0.0dip" android:layout_height="65.0dip" android:layout_weight="1.0" android:text="m" android:background="@drawable/button" android:textColor="@color/primaryText" android:gravity="center" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <TextView android:id="@+id/keyDelete" android:layout_width="0.0dip" android:layout_height="65.0dip" android:layout_weight="1.3" android:text="@string/delete" android:background="@drawable/button" android:textColor="@color/primaryText" android:gravity="center" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="0.0dip" android:layout_height="wrap_content"
        android:layout_column="0" android:layout_row="4" android:layout_columnWeight="1.0">
        <TextView android:id="@+id/keyColon" android:layout_width="0.0dip" android:layout_height="65.0dip" android:layout_weight="1.0" android:text=":" android:background="@drawable/button" android:textColor="@color/primaryText" android:gravity="center" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <TextView android:id="@+id/keyInputSettings" android:layout_width="0.0dip" android:layout_height="65.0dip" android:layout_weight="1.0" android:text="@string/changekeyboard" android:background="@drawable/button" android:textColor="@color/primaryText" android:gravity="center" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <TextView android:id="@+id/keyName" android:layout_width="0.0dip" android:layout_height="65.0dip" android:layout_weight="1.0" android:text="@string/namer" android:background="@drawable/button" android:textColor="@color/primaryText" android:gravity="center" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <TextView android:id="@+id/keySpace" android:layout_width="0.0dip" android:layout_height="65.0dip" android:layout_weight="4.5" android:text="" android:background="@drawable/button" android:textColor="@color/primaryText" android:gravity="center" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <TextView android:id="@+id/keyPeriod" android:layout_width="0.0dip" android:layout_height="65.0dip" android:layout_weight="1.0" android:text="." android:background="@drawable/button" android:textColor="@color/primaryText" android:gravity="center" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <TextView android:id="@+id/keyNextLine" android:layout_width="0.0dip" android:layout_height="65.0dip" android:layout_weight="1.5" android:text="@string/enter" android:background="@drawable/button" android:textColor="@color/primaryText" android:gravity="center" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

    </LinearLayout>
</GridLayout>